<resources>
    <string name="app_name">DiagnoDixie</string>

    <string name="text_siguiente">Siguiente</string>
    <string name="text_terminar">Terminar prueba</string>
    <string name="text_g">g</string>
    <string name="text_p">p</string>
    <string name="text_q">q</string>
    <string name="text_pa">pa</string>
    <string name="text_la">la</string>
    <string name="text_ta">ta</string>
    <string name="text_ap">ap</string>
    <string name="text_3">3</string>
    <string name="text_f">F</string>
    <string name="text_e">E</string>
    <string name="text_d">d</string>
    <string name="text_b">b</string>
    <string name="text_ingrese_contra">Ingrese una contraseña (para obtener los resultados al final, no la olvide):</string>
    <string name="text_ej_edittext">Ej: *********</string>
    <string name="text_question1">1. Haz click en la letra: </string>
    <string name="text_question2">2. Haz click en la letra: </string>
    <string name="text_question3">3. Haz click en la letra: </string>
    <string name="text_question4">4. Haz click en la letra: </string>
    <string name="text_question5">5. Haz click en la letra: </string>
    <string name="text_question6">6. Haz click en el número:</string>
    <string name="text_question7">7. Haz click en la sílaba:</string>
    <string name="text_dra">dra</string>
    <string name="text_bra">bra</string>
    <string name="text_pra">pra</string>
    <string name="text_dar">dar</string>
    <string name="text_tra">tra</string>
    <string name="text_question8">8. Haz click en la sílaba:</string>
    <string name="text_tar">tar</string>
    <string name="text_question9">9. Haz click en la sílaba:</string>
    <string name="text_par">par</string>
    <string name="text_question10">10. Haz click en la sílaba:</string>
    <string name="text_bar">bar</string>
    <string name="text_question19">11. ¿Qué letra es?</string>
    <string name="text_p_mayus">P</string>
    <string name="text_t_mayus">T</string>
    <string name="text_d_mayus">D</string>
    <string name="text_question20">12. ¿Qué letra es?</string>
    <string name="text_question21">13. ¿Qué letra es?</string>
    <string name="text_question22">14. ¿Qué letra es?</string>
    <string name="text_question23">15. ¿Qué letra es?</string>
    <string name="text_question24">16. ¿Qué sílaba es?</string>
    <string name="text_te">te</string>
    <string name="text_de">de</string>
    <string name="text_pe">pe</string>
    <string name="text_question25">17. ¿Qué sílaba es?</string>
    <string name="text_question26">18. ¿Que sílaba es?</string>
    <string name="text_question28">19. Haz click en la palabra correcta:</string>
    <string name="text_tres">tres</string>
    <string name="text_ters">ters</string>
    <string name="text_question30">20. Haz click en la palabra correcta:</string>
    <string name="text_question32">22. Completa la palabra: \n _ueso</string>
    <string name="text_question37">24. Completa la palabra: \n _roma</string>
    <string name="text_t">t</string>
    <string name="text_question39">25. Haz click en las palabras que son correctas:</string>
    <string name="text_tapon">tapón</string>
    <string name="text_jabon">jabón</string>
    <string name="text_jadon">jadón</string>
    <string name="text_bastion">bastión</string>
    <string name="text_dastion">dastión</string>
    <string name="text_patron">patrón</string>
    <string name="text_patorn">patorn</string>
    <string name="text_question40">26. Haz click en las palabras que son correctas:</string>
    <string name="text_queso">queso</string>
    <string name="text_pueso">pueso</string>
    <string name="text_pronto">pronto</string>
    <string name="text_pornto">pornto</string>
    <string name="text_cual">cual</string>
    <string name="text_caul">caul</string>
    <string name="text_congrats">¡FELICIDADES! ¡TERMINASTE EL JUEGO!</string>
    <string name="text_indication_password_result">Para que tu encargado sepa lo super que te fue, dale el dispositivo para que ingrese la contaseña:</string>
    <string name="text_title_result">RESULTADOS DE LA PRUEBA</string>
    <string name="text_answers">Él/la niño/a contesto correctamente un total de:</string>
    <string name="text_diagnostic">Por lo que se concluye que:</string>
    <string name="text_title_character">¡Toca a un personaje para iniciar el juego!</string>
    <string name="text_neko">Neko</string>
    <string name="text_dogui">Dogui</string>
    <string name="text_rex">Rex</string>
    <string name="text_pio">Pio</string>
    <string name="text_sharky">Sharky</string>
    <string name="text_pingui">Pingui</string>
    <string name="btn_play_text">Play</string>
    <string name="text_question31">21. Completa la palabra:   pa_a</string>
    <string name="text_ingreso_edad">Ingrese la edad de él/la niño/a:</string>
    <string name="text_question35">23. Completa la palabra:   _rama</string>
    <string name="text_condicion">Él/la niño/a requiere apoyo en su proceso lector</string>
    <string name="text_condicion_mayor">La persona requiere apoyo en su proceso lector</string>
    <string name="text_no_condicion">Él/la niño/a no presenta la condición</string>
    <string name="text_no_condicion_mayor">La persona no presenta la condición</string>
    <string name="text_codicion_indefinida">Él/la niño/a tiene una edad muy temprana para definir si presenta o no la condicion</string>
    <string name="text_validar_siguiente">Debes seleccionar una opción para continuar</string>
    <string name="motivation1">¡Lo haces genial!</string>
    <string name="motivation2">¡Eres capaz de hacerlo!</string>
    <string name="motivation3">¡Cada vez eres mejor!</string>
    <string name="motivation4">¡Puedes lograrlo!</string>
    <string name="motivation5">Casi terminas ¡Tú puedes!</string>
</resources>
