<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_app"
        android:orientation="vertical"
        tools:context=".questions.Question32">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_question32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_view"
                    android:text="@string/text_question32"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_main"/>

            <RadioGroup
                    android:id="@+id/rg_question32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:id="@+id/rb_question32_opc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_p"
                        android:textSize="@dimen/text_main"
                        android:layout_margin="@dimen/margin_view"/>

                <RadioButton
                        android:id="@+id/rb_question32_opc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_q"
                        android:textSize="@dimen/text_main"
                        android:layout_margin="@dimen/margin_view"/>


            </RadioGroup>

            <Button
                    android:id="@+id/bt_Question32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_main"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_siguiente"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_main" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>