<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/color_purple">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_logoMain"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_margin="@dimen/margin_view"
                android:src="@drawable/dixielogo" />

            <TextView
                android:id="@+id/tv_EdadKid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:text="@string/text_ingreso_edad"
                android:textSize="@dimen/text_main"
                android:textColor="@color/text"/>

            <EditText
                android:id="@+id/ed_EdadKid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:background="@color/colorWhite"
                android:textAlignment="center"
                android:inputType="number"
                android:hint=" Ej: 6"
                android:textSize="@dimen/text_main" />

            <TextView
                android:id="@+id/tv_PasswordUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:text="@string/text_ingrese_contra"
                android:textSize="@dimen/text_main"
                android:textColor="@color/text"/>

            <EditText
                android:id="@+id/ed_PaswwordUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:background="@color/colorWhite"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:hint="@string/text_ej_edittext"
                android:textSize="@dimen/text_main" />

            <Button
                android:id="@+id/bt_Next"
                android:layout_width="@dimen/width_button"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_view"
                android:text="@string/text_siguiente"
                android:textSize="@dimen/text_main"
                android:textColor="@color/text_button"
                android:background="@color/background_button"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>